--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/zcanter/aframe-gradient-sky/master/dist/gradientsky.min.js"></script>
     
-    <script src="./js/Rotation.js"></script>
+    <script src="js/Rotation.js"></script>
     
   </head>
   <body>
